add description on research Q2 bar plot

--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -22,7 +22,9 @@ library(here) # simplifies relative file paths
 olympics_data <- read_csv(here("data", "olympics.csv"))
 ```
 
-The dataset we’re analyzing is available on kaggle and contains historical data on the modern Olympic game including all games starting from Athens 1896 till 2016. This data was scraped from [www.sports-reference.com](www.sports-reference.com) in 2018 and wrangled by rgriffin. Until 1992, winter and summer games used to be held in the same year. Since 1992, both summer and winter games have been taking place in a 4-year cycle (an olympiad!), resulting in winter games in 1994, summer in 1996, then again winter in 1998, and so on. The data set contains rich information on worldwide participation in Olympic Games across the years. We choose it because we're interested in the Olympics, and we believe that first we can show political and historical trends influencing countries' performances. Second, we narrow down to the angle of gender issues to find out female participation and performance over the years and across countries.
+The dataset we’re analyzing is available on kaggle and contains historical data on the modern Olympic game including all games starting from Athens 1896 till 2016. This data was scraped from [www.sports-reference.com](www.sports-reference.com) in 2018 and wrangled by rgriffin. Until 1992, winter and summer games used to be held in the same year. Since 1992, both summer and winter games have been taking place in a 4-year cycle (an olympiad!), resulting in winter games in 1994, summer in 1996, then again winter in 1998, and so on. The data set contains rich information on worldwide participation in Olympic Games across the years. 
+
+We choose it because we're interested in the Olympics, and we believe that first we can show political and historical trends influencing countries' performances. Second, we narrow down to the angle of gender issues to find out female participation and performance over the years and across countries.
 
 This data contains 271,116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual Olympic event.To give a broad view, our data include information on 66 different sports, 1,184 different teams, 51 games, 230 different NOCs, 42 different host cities across 35 different years. 222,552 of the athletes participated in the summer games, while 48,564 participated in the winter season. The description of variables is included in the codebook in the `readme` file under the data folder in this repository.
 
@@ -84,10 +86,11 @@ One approach is to divide the number of medals won by a country in a year by the
 
 In a more detailed way, we can also aggregate the events by disciplines to add more information for our time-series analysis, as long as the visualization is not overcomplicated. To do so we will create a new variable that groups the events by sports categories and summarize the number of medals won in each discipline for each country over years. This part can be illustrated through either colors or facets.
 
-2. We will construct two plots to assess the second set of questions. Our first plot, a time-series plot, will indicate the proportion of female to male athletes on the y axis and year of the Olympic games on the x axis. Furthermore, we will make use of the color aesthetic to color code different lines by continent. Our second plot will replicate the same basic structure, except on the y axis it will map the proportion of medals won by female athletes by continent, which is again indicated by the color aesthetic. Finally, we will also create a bar chart indicating the 15 countries with the highest number of female Olympic medalists.
+2. We will construct two plots to assess the second set of questions. Our first plot, a time-series plot, will indicate the proportion of female athletes on the y axis and year of the Olympic games on the x axis. Furthermore, we will make use of the color aesthetic to color code different lines by continent. Our second plot will replicate the same basic structure, except on the y axis it will map the proportion of medals won by female athletes by continent, which is again indicated by the color aesthetic. 
 
-Note: Just to distinguish the exact variables used in explaining Q1 and Q2 so they are not completely overlapping, the potentially used variables are listed here:
+Finally, we will also create a bar chart indicating the 15 countries with the highest number of female Olympic medalists in recent 50 years. The range of years ensures that the numbers of events and participating countries/athletes are more stabilized. The number of medals is on the x axis, and the top-15 countries' names is on the y axis with a descending order. The number of different types of medals (gold, silver or bronze) will be shown in different colors. We also consider putting summer compared to winter seasons in different facets.
 
-Q1: year, country (new variable derived from NOC), average number of medals per country (new), types of medals, seasons, NATO/Warsaw Pact member states (new)
+*Note: Just to distinguish the exact variables used in explaining Q1 and Q2 so they are not completely overlapping, the potentially used variables are listed here:*
 
-Q2: country (new variable derived from NOC), sex, continent (new), medal, year
+- Q1: year, country (new variable derived from NOC), average number of medals per country (new and with appropriate normalization), types of medals, seasons, NATO/Warsaw Pact member states (new categorical variable)
+- Q2: year, country (new variable derived from NOC), continent (new categorical variable), the proportion of female athletes per year and later by continent (new), types of medals, seasons
