--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -24,6 +24,9 @@ library(countrycode) #get country names
 (1-2 paragraphs): Brief introduction to the dataset. You may repeat some of the information about the dataset provided in the introduction to the dataset on the TidyTuesday repository, paraphrasing on your own terms. Imagine that your project is a standalone document and the grader has no prior knowledge of the dataset.
 
 ```{r load-data}
+#questions for office hours:
+  #can you fill missing values with tidy approach?
+
 #read in datasets
 olympics_data <- read_csv(here("data", "olympics.csv"))
 countrycode <- codelist_panel %>%
@@ -33,13 +36,14 @@ countrycode <- codelist_panel %>%
   distinct()
 
 #amend datasets to include new variables and fill crucial missing values
-countrycode$noc[70] = "GDR"
-countrycode$continent[70] = "Europe"
-countrycode$noc[51] = "TCH"
-countrycode$continent[51] = "Europe"
+countrycode$noc[70] <- "GDR"
+countrycode$continent[70] <- "Europe"
+countrycode$noc[51] <- "TCH"
+countrycode$continent[51] <- "Europe"
+countrycode[nrow(countrycode) + 1,] <- c("URS", "Europe", "Soviet Union", "Warsaw Pact")
 countrycode <- countrycode %>%
   mutate(nato_wp = case_when(country == "Belgium" | country == "Canada" | country == "Denmark" | country == "France" | country == "Iceland" | country == "Italy" | country == "Luxembourg" | country == "Netherlands" | country == "Norway" | country == "Portugal" | country == "United Kingdom" | country == "United States" | country == "Greece" | country == "Turkey" | country == "Germany" | country == "Spain" ~ "NATO",
-                             country == "Russia" | country == "Poland" | country == "Bulgaria" | country == "Poland" | country == "Poland" | country == "Poland" ~ "Warsaw Pact",
+                             country == "Russia" | country == "Hungary" | country == "Bulgaria" | country == "Poland" | country == "German Democratic Republic" | country == "Romania" | country == "Czechoslovakia" | country == "URS"~ "Warsaw Pact",
                              TRUE ~ "Non-Aligned or not applicable"))
 
   mutate(size = as.factor(case_when(seats < 125 ~ "Small",
@@ -70,9 +74,18 @@ In order to answer these questions, we examine the `country` variable (coded bas
 
 ### Approach
 
+Approach (1-2 paragraphs): Describe what types of plots you are going to make to address your question. For each plot, provide a clear explanation as to why this plot (e.g. boxplot, barplot, histogram, etc.) is best for providing the information you are asking about. The two plots should be of different types, and at least one of the two plots needs to use either color mapping or facets.
+
 ### Analysis
 
+Analysis (2-3 code blocks, 2 figures, text/code comments as needed): In this section, provide the code that generates your plots. Use scale functions to provide nice axis labels and guides. You are welcome to use theme functions to customize the appearance of your plot, but you are not required to do so. All plots must be made with ggplot2. Do not use base R or lattice plotting functions.
+
 ### Discussion
+
+Discussion (1-3 paragraphs): In the Discussion section, interpret the results of your analysis. Identify any trends revealed (or not revealed) by the plots. Speculate about why the data looks the way it does.
+
+
+We encourage you to be concise. A paragraph should typically not be longer than 5 sentences. You are not required to perform any statistical tests in this project, but you may do so if you find it helpful to answer your question.
 
 ## Question 2
 
