--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -125,6 +125,8 @@ To illustrate gender difference in Olympic, our dataset provides rich informatio
 
 Approach (1-2 paragraphs): Describe what types of plots you are going to make to address your question. For each plot, provide a clear explanation as to why this plot (e.g. boxplot, barplot, histogram, etc.) is best for providing the information you are asking about. The two plots should be of different types, and at least one of the two plots needs to use either color mapping or facets.
 
+To answer the first question, “How does female participation in Olympics Games change? ” we construct an overall time-series line plot. This plot comes from a summarized table with the average proportion of female to male athletes and the number of games female athletes participate in over the years. The two measures are positioned on the y-axis and illustrated in different colors. The year for each event is on the x-axis. The season information is demonstrated through two different facets. We choose the line plot format first because it can best visually represent the trend information. Second, it has an advantage in terms of data-ink-ratio for visualization, therefore it to some extent simplifies the complexities in our aggregated data.
+
 
 
 ### Analysis
