--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -176,7 +176,7 @@ participate_sex %>%
 ```
 
 ```{r Q2-2-country ranking}
-olympics_data %>%
+medalist_rank <- olympics_data %>%
   filter(year >= 2000) %>% # focusing on  recent years
   mutate(gold = if_else(medal == "Gold", 1, 0),
          silver = if_else(medal == "Silver", 1, 0),
@@ -184,10 +184,19 @@ olympics_data %>%
   group_by(noc, sex) %>%
   summarize(n_gold = sum(gold, na.rm = TRUE), 
             n_silver = sum(silver, na.rm = TRUE), 
-            n_bronze = sum(bronze, na.rm = TRUE), 
-            .groups = "drop") %>%
+            n_bronze = sum(bronze, na.rm = TRUE), .groups = "drop") %>%
   mutate(n_medal = n_gold + n_silver + n_bronze) %>%
-  arrange(desc(n_medal))
+  group_by(noc) %>%
+  mutate(visit = 1:n()) %>%
+  gather("sex", "n_gold", "n_silver", "n_bronze", "n_medal", 
+         key = variable, value = number) %>%
+  unite(combi, variable, visit) %>%
+  spread(combi, number) %>%
+  select(-c("sex_1", "sex_2"))
+medalist_rank[2:9] = lapply(medalist_rank[2:9], FUN = function(y){as.numeric(y)})
+medalist_rank <- medalist_rank %>%
+  mutate(fp_medal = n_medal_1 / sum(n_medal_1, n_medal_2))
+
 ```
 
 ### Discussion
