--- a/presentation/presentation.Rmd
+++ b/presentation/presentation.Rmd
@@ -39,46 +39,7 @@ knitr::opts_chunk$set(
 ```{r load-data, include=FALSE}
 #read in datasets
 olympics_data <- read_csv(here("data", "olympics.csv"))
-countrycode <- codelist_panel %>%
-  rename(noc = ioc,
-         country = country.name.en) %>%
-  select(noc, continent, country) %>%
-  distinct()
 
-#amend datasets to include new variables and fill crucial missing values
-countrycode$noc[70] <- "GDR"
-countrycode$continent[70] <- "Europe"
-countrycode$noc[51] <- "TCH"
-countrycode$continent[51] <- "Europe"
-countrycode[nrow(countrycode) + 1,] <- "URS"
-#countrycode[nrow(countrycode) + 1,] <- c("URS", "Europe", "Soviet Union", "Warsaw Pact")
-
-#add/manipulate variables
-countrycode <- countrycode %>%
-  mutate(nato_wp = case_when(country == "Belgium" | country == "Canada" | country == "Denmark" | country == "France" | country == "Iceland" | country == "Italy" | country == "Luxembourg" | country == "Netherlands" | country == "Norway" | country == "Portugal" | country == "United Kingdom" | country == "United States" | country == "Greece" | country == "Turkey" | country == "Germany" | country == "Spain" ~ "NATO",
-                             country == "Russia" | country == "Hungary" | country == "Bulgaria" | country == "Poland" | country == "German Democratic Republic" | country == "Romania" | country == "Czechoslovakia" | country == "URS"~ "Warsaw Pact", #CHANGE THIS to Soviet Union when figured out
-                             TRUE ~ "Non-Aligned or not applicable"),
-         usa_ussr = case_when(noc == "URS" ~ "USSR",
-                              noc == "USA" ~ "USA",
-                              TRUE ~ "Other"))
-
-unique(countrycode$usa_ussr)
-
-#merge olympics and countrycode datasets
-olympics_joined <- left_join(olympics_data, unique(countrycode), by = "noc")
-
-#add/manipulate variables to merged dataset
-olympics_joined_test <- olympics_joined %>%
-  mutate(medal_binary = ifelse(!is.na(medal), 1, 0),
-         medal_weighted = case_when(medal == "Gold" ~ 3,
-                                    medal == "Silver" ~ 2,
-                                    medal == "Bronze" ~ 1,
-                                    TRUE ~ 0))
-  
-  
-olympics_joined_test2 <- olympics_joined_test %>%
-  group_by(games, usa_ussr) %>%
-  summarize(medal_prop = (sum(medal_binary, na.rm = TRUE)))
 
 ```
 
@@ -137,14 +98,52 @@ glance(model)
 
 ## Plots
 
-```{r recode-species, echo = FALSE}
+```{r recode-olympics, echo = FALSE}
 # In this chunk I'm doing a bunch of analysis that I don't want to present 
 # in my slides. But I need the resulting data frame for a plot I want to present.
-penguins_modified <- penguins %>%
-  mutate(species = fct_other(species, keep = "Adelie"))
+countrycode <- codelist_panel %>%
+  rename(noc = ioc,
+         country = country.name.en) %>%
+  select(noc, continent, country) %>%
+  distinct()
+
+#amend datasets to include new variables and fill crucial missing values
+countrycode$noc[70] <- "GDR"
+countrycode$continent[70] <- "Europe"
+countrycode$noc[51] <- "TCH"
+countrycode$continent[51] <- "Europe"
+countrycode[nrow(countrycode) + 1,] <- "URS"
+#countrycode[nrow(countrycode) + 1,] <- c("URS", "Europe", "Soviet Union", "Warsaw Pact")
+
+#add/manipulate variables
+countrycode <- countrycode %>%
+  mutate(nato_wp = case_when(country == "Belgium" | country == "Canada" | country == "Denmark" | country == "France" | country == "Iceland" | country == "Italy" | country == "Luxembourg" | country == "Netherlands" | country == "Norway" | country == "Portugal" | country == "United Kingdom" | country == "United States" | country == "Greece" | country == "Turkey" | country == "Germany" | country == "Spain" ~ "NATO",
+                             country == "Russia" | country == "Hungary" | country == "Bulgaria" | country == "Poland" | country == "German Democratic Republic" | country == "Romania" | country == "Czechoslovakia" | country == "URS"~ "Warsaw Pact", #CHANGE THIS to Soviet Union when figured out
+                             TRUE ~ "Non-Aligned or not applicable"),
+         usa_ussr = case_when(noc == "URS" ~ "USSR",
+                              noc == "USA" ~ "USA",
+                              TRUE ~ "Other"))
+
+unique(countrycode$usa_ussr)
+
+#merge olympics and countrycode datasets
+olympics_joined <- left_join(olympics_data, unique(countrycode), by = "noc")
+
+#add/manipulate variables to merged dataset
+olympics_joined_test <- olympics_joined %>%
+  mutate(medal_binary = ifelse(!is.na(medal), 1, 0),
+         medal_weighted = case_when(medal == "Gold" ~ 3,
+                                    medal == "Silver" ~ 2,
+                                    medal == "Bronze" ~ 1,
+                                    TRUE ~ 0))
+  
+  
+olympics_joined_test2 <- olympics_joined_test %>%
+  group_by(games, usa_ussr) %>%
+  summarize(medal_prop = (sum(medal_binary, na.rm = TRUE)))
 ```
 
-```{r plot-penguins, echo = FALSE, warning = FALSE}
+```{r plot-olympicstimeseries, echo = FALSE, warning = FALSE}
 # Code hidden with echo = FALSE
 # Uses data set from previous chunk
 # Creates plot for medal proportion over time
